<resources>
    <string name="app_name">The Update</string>

    <string name="api_key">f54f0ea8e73542dbaebcf1a61f8c4049</string>

    <!-- List Empty Strings -->
    <string name="nothing">Nothing Here</string>

    <!-- About App Strings -->
    <string name="app_icon">App Icon</string>
    <string name="app_description">The Update is a lightweight Android Application, which
    curates news from over 30,000 sources to deliver top headlines in Business, Entertainment, Health Care,
    Science, Sports and Technology to you.</string>

    <string name="app_link">https://github.com/nihitb06/TheUpdate</string>

    <string name="app_version">Version: %1$s</string>

    <string name="open_source">Open Source Licenses</string>
    <string name="assets">Image Assets Used</string>
    
    <string name="attribution">powered by NEWSAPI.org</string>

    <string name="license">License: CC Attribution 3.0</string>
    <string name="unmodified">Unmodified</string>

    <!-- Navigation Menu Strings -->
    <string name="close">Close</string>
    <string name="home">Home</string>

    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <string-array name="menu">
        <item>@string/close</item>
        <item>@string/home</item>
        <item>@string/business</item>
        <item>@string/entertainment</item>
        <item>@string/health</item>
        <item>@string/science</item>
        <item>@string/sports</item>
        <item>@string/technology</item>
    </string-array>

    <string-array name="categories">
        <item>@string/business</item>
        <item>@string/entertainment</item>
        <item>@string/health</item>
        <item>@string/science</item>
        <item>@string/sports</item>
        <item>@string/technology</item>
    </string-array>

    <!-- Main Menu Strings -->
    <string name="app_info">About App</string>

    <!-- App Drawer Strings -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Content Descriptions -->
    <string name="content_description_header_item">Shows the Category to which the Article belongs</string>
    <string name="content_description_content_item">Shows Image associated to article</string>
    <string name="content_description_list_empty">Image to show List is empty</string>

    <!-- App Details Strings -->
    <string name="byline">By:</string>
</resources>
